# fastapi-otel-signoz

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
deployment/signoz/clickhouse-setup/: docker-compose-minimal.yaml
src/: app.py
